Changes to be committed: 	modified:   index.html 	modified:   src/stylesheets/main-style.css

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     </header>
 
     <main>
-        <section>
+        <top-section>
             <h5>Postado em 04/10/2022</h5>
 
             <p>Lorem ipsum aenean scelerisque accumsan praesent vitae, porttitor venenatis donec torquent non tortor, sollicitudin tincidunt varius odio scelerisque.
             dictumst lorem ligula himenaeos eros dapibus consequat etiam metus purus quam, adipiscing arcu luctus sociosqu ipsum torquent <strong>quisque nullam.</strong>
             quisque inceptos vitae augue ut nam justo nullam aliquet, quam commodo lectus euismod ipsum lobortis lorem, ultrices aenean euismod sagittis pulvinar tristique arcu.</p>
             
-            <img src="src/assets/imagens/destaque.webp" alt="destaque" width="100%">
-        </section>
+            <img src="src/assets/imagens/destaque.webp" alt="destaque">
+        </top-section>
 
         <section>
             <h2>Lorem ipsum dolor sit amet consectetur.</h2>
